@@ -8,6 +8,7 @@ now : current
    working if the output address was not multicast.
  * Add support for Griffin CAS and for DGCrypt CAS.
  * Add support for setting multicast source address /SSM/ (--input-source).
+ * Add support for EMM filters similar to DVBAPI filters (match + mask).
 
 2012-09-10 : Version 9.0
  * Add --no-output-on-error (-u) option. By using this option output can be
